# ISAC_Division_LLM

./: .env  .gitignore  Division2_knowledge.gml  main.py  my_list.pkl  pyproject.toml  wiki_content.json  wiki_graph.html  wiki_graph_data.json
old_graph_data/: wiki_graph.html  wiki_graph_data.json  wiki_tree.json
src/: AgentDB.py  Answer_generator.py  ChunkRouter.py  CommandGroup.py  DiscordBot.py  RecursiveChunkNavigator.py  TextChunker.py  ascii_art_functions.py
src/Local_chunk_edits/: ChunkRouter.py
src/data/: scraped_data_v01.json
src/data_collector/: CustomWikiScapper.py  data_cleaner.py  data_collector.py  wiki_tree_parser.py
src/data_collector/utils/: data_collection_functions.py
