[project]
name = "isac-division-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "nltk>=3.9.1",
    "pandas>=2.3.0",
    "pytube>=15.0.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.0.3",
]
