[project]
name = "isac-division-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "discord>=2.3.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.3",
    "langchain-text-splitters>=0.3.8",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "ollama>=0.5.1",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "pytube>=15.0.0",
    "pyvis>=0.3.2",
    "scipy>=1.15.3",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.0.3",
]
